yield to per-page javascript

--- a/app/views/shared/_javascripts_global.html.erb
+++ b/app/views/shared/_javascripts_global.html.erb
@@ -6,3 +6,4 @@
 <!-- Site wide JavaScript -->
 <%= javascript_include_tag 'application' %>
 <!-- //Site wide JavaScript -->
+<%= yield :javascript %>
