--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@ Global stylesheet
 */
 
 // = require_self
-// = require jquery.ui.slider
+//*= require jquery.ui.slider
 
 
 /* [IMPORT ALL PARTIALS]
