updating main import to application

--- a/app/assets/stylesheets/old-ie.scss
+++ b/app/assets/stylesheets/old-ie.scss
@@ -1,4 +1,4 @@
-@charset "utf-8";
+
 
 /*
 ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
@@ -29,8 +29,8 @@ $fix-mqs: 1600;
 
 /* [IMPORTS]
 -------------------------------------------------------*/
-/* Import everything from 'main.scss' */
-@import "main";
+/* Import everything from 'application.scss' */
+@import "application";
 
 
 /* ======================================================================================
