Removed centre layout from national page.

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -1,10 +1,10 @@
 <main class="container" id="main" role="main">
   <%- @centres.each do |state, centres| -%>
-    <div style="float: left">
+    <div>
       <%= state %>
       <ul>
         <%- centres.each do |centre| -%>
-          <li><%= link_to centre.name, centre_path(centre.code) %></li>
+          <li><%= link_to centre.short_name, centre_path(centre.code) %></li>
         <%- end -%>
       </ul>
     </div>
