--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,11 +32,16 @@
 <%- content_for :javascript do -%>
   <script type='text/javascript'>
     (function($) {
-      var re = /([^&=]+)=?([^&]*)/g;
+      $.expr[':'].startsWith = $.expr.createPseudo(function(str) {
+        return function(elem) {
+          return jQuery(elem).text().replace(/[^a-zA-Z]/g,'').toUpperCase().indexOf(str.replace(/[^a-zA-Z]/g,'').toUpperCase()) == 0;
+        };
+      });
       var decode = function(str) {
         return decodeURIComponent(str.replace(/\+/g, ' '));
       };
       $.parseParams = function(query) {
+        var re = /([^&=]+)=?([^&]*)/g;
         var params = {}, e;
         if (query) {
           if (query.substr(0, 1) == '?') {
@@ -77,6 +82,16 @@
         },
         change: function(event, ui) {
           changeParams({price: ui.values[0] + '-' + ui.values[1]});
+        }
+      });
+      $("input.facet-filter").keyup(function(event) {
+        var field = $(event.target);
+        console.debug(window.field=field);
+        if (field.val() == '')
+          field.siblings("ul").children().show();
+        else {
+          field.siblings("ul").children("li:startsWith(" + field.val() + ")").show();
+          field.siblings("ul").children("li:not(:startsWith(" + field.val() + "))").hide();
         }
       });
     })(jQuery);
