--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@
 
 					<!-- Shopping centre select -->
 					<div class="shopping-centre-select container">
-						<h1><a href="/" rel="home" title="Change shopping centre"><%= @centre.short_name %> <span class="icon icon--arrow-right-full hide-fully--palm" aria-hidden="true"></span></a></h1>
+						<h1><a href="<%= centre_path(params[:centre_id] || params[:id]) %>" rel="home" title="Change shopping centre"><%= @centre.short_name %> <span class="icon icon--arrow-right-full hide-fully--palm" aria-hidden="true"></span></a></h1>
 						<a href="/" class="btn hide-fully--non-palm" rel="home">Change <span class="icon icon--arrow-right icon--flush-top" aria-hidden="true"></span></a>
 					</div>
 					<!-- //Shopping centre select -->
