--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -34,7 +34,7 @@
     (function($) {
       $.expr[':'].startsWith = $.expr.createPseudo(function(str) {
         return function(elem) {
-          return jQuery(elem).text().replace(/[^a-zA-Z]/g,'').toUpperCase().indexOf(str.replace(/[^a-zA-Z]/g,'').toUpperCase()) == 0;
+          return jQuery(elem).text().replace(/[^a-zA-Z0-9]/g,'').toUpperCase().indexOf(str.replace(/[^a-zA-Z0-9]/g,'').toUpperCase()) == 0;
         };
       });
       var decode = function(str) {
@@ -86,7 +86,6 @@
       });
       $("input.facet-filter").keyup(function(event) {
         var field = $(event.target);
-        console.debug(window.field=field);
         if (field.val() == '')
           field.siblings("ul").children().show();
         else {
