--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,7 @@
-<br /><br />
-
 <main class="container" id="main" role="main">
+
+  <h1 class="hide-visually">Events</h1>
+
   <div id="pin-board">
 
     <%- @events.each do |event| -%>
