removed redundant config file

--- a/app/views/stores/_map.html.erb
+++ b/app/views/stores/_map.html.erb
@@ -1,3 +1,8 @@
+<!--[if lte IE 8]>
+<div id="map">Not supported... sucks for you!</div>
+<![endif]-->
+<!--[if gt IE 8]><--!>
 <%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
 <%= javascript_include_tag 'map' %>
 <div id="map">Loading map...</div>
+<!--><![endif]-->
